Deckel nc file format compatibility

--- a/bCNC/bCNC.ini
+++ b/bCNC/bCNC.ini
@@ -163,6 +163,8 @@ command.7 = G90
 
 [CNC]
 units = 0
+#Some older machines, like my Deckel, use um units in the g-code 
+use_micron_gcode = 1
 lasercutter = 0
 laseradaptive = 0
 doublesizeicon = 0
